force-app/main/default/objects/Bus__c/fields/Bus_Type__c.field-meta.xml
<CustomField>
    <fullName>Bus_Type__c</fullName>
    <label>Bus Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Sleeper</fullName>
            </value>
            <value>
                <fullName>Non-AC Sleeper</fullName>
            </value>
            <value>
                <fullName>AC Seater</fullName>
            </value>
            <value>
                <fullName>Non-AC Seater</fullName>
            </value>
            <value>
                <fullName>Volvo Multi-Axle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>