force-app/main/default/objects/Bus__c/fields/External_Bus_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Bus_Id__c</fullName>
    <label>External Bus Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>